pdp breadcum prd name truncate login logo stretching fix large screen system prd name one line

--- a/app/design/frontend/Codilar/homelane/web/css/source/_custom-theme.less
+++ b/app/design/frontend/Codilar/homelane/web/css/source/_custom-theme.less
@@ -4497,7 +4497,8 @@ rs-module-wrap {
         header.modal-header {
             display: block;
             position: relative;
-            padding: 30px 0 0;
+            border-bottom: 6px solid #e72224;
+            padding: 40px 0 0;
             .modal-title {
                 display: none;
             }
@@ -4507,15 +4508,15 @@ rs-module-wrap {
         }
         .action-close {
             &:before {
-                background: url(../images/pop-up-close1.png) no-repeat 0 0;
+                background: url(../images/back-logo.png) no-repeat 0 0;
                 width: 100%;
                 height: 62px;
                 content: "";
                 display: block;
                 position: absolute;
-                left: 0;
-                background-size: 100% 100%;
-                top: 0;
+                left: 8px;
+                background-size: 255px 48px;
+                top: 8px;
             }
         }
         &._show {
@@ -5183,15 +5184,6 @@ rs-module-wrap {
     }
 }
 @media only screen and (min-width: 550px) and (max-width: 767px) {
-    .modal-popup.customer-popup , aside.modal-popup.city-popup {
-        .action-close:before {
-            height: 100px;
-            background-size: 100% 100%;
-        }
-        header.modal-header {
-            padding: 80px 0 0;
-        }
-    }
     aside.modal-popup.city-popup._inner-scroll {
         div.modal-content {
             margin-top: 110px;
@@ -5224,17 +5216,22 @@ rs-module-wrap {
             overflow: hidden;
             li.item{
                 display: flex;
-            }
-            .category + .product{
-                strong{
-                    display: block;
-                    text-overflow: ellipsis;
-                    white-space: nowrap;
-                    word-wrap: break-word;
+                &:last-child{
+                    display: inline-block;
+                    width: 100%;
                     overflow: hidden;
-                    max-width: 80%;
-                } 
-            }   
+                }
+                &.product{
+                    strong{
+                        display: block;
+                        text-overflow: ellipsis;
+                        white-space: nowrap;
+                        word-wrap: break-word;
+                        overflow: hidden;
+                        max-width: 100%;
+                    } 
+                }   
+            }  
         }
         @media (min-width:769px){
             padding-left: 28px;
@@ -5494,6 +5491,10 @@ rs-module-wrap {
                 -webkit-line-clamp: 2;
                 -webkit-box-orient: vertical;
                 overflow: hidden;
+                @media (min-width:1400px){
+                    -webkit-line-clamp: 1;
+                     height: 22px;
+                }
                 @media (max-width:767px){
                     font-size: 14px;
                     line-height: 17px;
